notificaticon z-index fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -763,7 +763,7 @@ tfoot td {
   width: 100vw;
   height: 100vh;
   background-color: #ffffff9d;
-  z-index: 999;
+  z-index: 998;
   display: flex;
   flex-direction: column;
   justify-content: center;
